--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Tic-Tac-Toe</title>
+    <title>JAVA</title>
 
 </head>
 
@@ -19,6 +19,7 @@
             <p>Made by Gourav</p>
 
         </div>
+        <div id ="msg">It's X Turn</div>
         <table align="center">
 
             <tr>
@@ -37,6 +38,7 @@
                 <td></td>
             </tr>
         </table>
+        
         <div class="btns">
             <button id="b1" class="btn btn-primary btn-lg" >Start Over</button>
             <button id="b2" class="btn btn-success btn-lg" onClick="location.reload()">Reset Game</button>
