--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <input id="p1" type="text" value="" placeholder="X" >
         <label>Player 2:</label>
         <input id="p2" type="text" value="" placeholder="O" >
-        <button id="b1" onclick="start()" class="btn btn-primary btn-lg">Get Started</button>
+        <button id="b3" onclick="start()" class="btn btn-lg btn-warning">Single Match</button>
+        <button id="b4" class="btn btn-lg btn-warning">Tournament of three matches</button>
+        <!-- <button id="b1" onclick="start()" class="btn btn-primary btn-lg">Get Started</button> -->
         <div id="msg"></div>
         <table align="center">
             <tr>
@@ -42,9 +44,20 @@
                 <td></td>
             </tr>
         </table>
-
+        <div class="score" id="score">
+            <div class="Shead">
+                <span>Score</span>
+            </div>
+            <div id="X">X: </div>
+            <div id="O">O:</div>
+        </div>
         <div class="btns">
             <button id="b2" class="btn btn-success btn-lg" onClick="location.reload()">Reset Game</button>
+            
+        </div>
+        <div class="tour-winning" id="tour-winning">
+            <p id="winner-name">Hello</p>
+            <button class="btn btn-danger btn-lg" id="tour-btn" >Next match</button>
         </div>
     </div>
 </body>
