--- a/victory.html
+++ b/victory.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     
-    <title>Thankyou</title>
+    <title>Victory</title>
 </head>
 <body>
     <div class="container">
@@ -17,6 +17,7 @@
             <h4>Moves made:</h4>
             <p id="data"></p>
         </div>
+        <button class="btn btn-lg btn-success"><a href="index.html" style="text-decoration: none; color:white;" >New Game</a></button>
     </div>
     
 </body>
