--- a/victory.html
+++ b/victory.html
@@ -9,12 +9,17 @@
     
     <title>Victory</title>
 </head>
+<style>
+    body{
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    }
+</style>
 <body>
     <div class="container">
         <div class="jumbotron">
-            <h1 id="winner">Congrats!</h1>
-            <p>You won</p>
-            <h4>Moves made:</h4>
+            <h1 style="color:brown" id="winner">Congrats!</h1>
+            <h5>You won the game</h5>
+            <h3 style="color:blue">Moves made:</h3>
             <p id="data"></p>
         </div>
         <button class="btn btn-lg btn-success"><a href="index.html" style="text-decoration: none; color:white;" >New Game</a></button>
