--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>JAVA</title>
+    <title>Tic Tac Toe</title>
 
 </head>
 
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="jumbotron">
             <h1>Welcome to Tic Tac Toe</h1>
-            <p>Made by Gourav</p>
+            <h5>Made by Gourav</h5>
         </div>
         <h3>Enter your name to get started</h3>
         <label>Player 1:</label>
@@ -24,7 +24,7 @@
         <label>Player 2:</label>
         <input id="p2" type="text" value="" placeholder="O" >
         <button id="b3" onclick="start()" class="btn btn-lg btn-warning">Single Match</button>
-        <button id="b4" class="btn btn-lg btn-warning">Tournament of three matches</button>
+        <button id="b4" onclick="tour()" class="btn btn-lg btn-warning">Tournament of three matches</button>
         <!-- <button id="b1" onclick="start()" class="btn btn-primary btn-lg">Get Started</button> -->
         <div id="msg"></div>
         <table align="center">
