Little more editing

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             
         </div>
         <div class="tour-winning" id="tour-winning">
-            <p id="winner-name">Hello</p>
+            <p id="winner-name">Wins</p>
+            <h4  id="overAll"></h4>
             <button class="btn btn-danger btn-lg" id="tour-btn" >Next match</button>
         </div>
     </div>
